Testing files and Salary Feature is added